<resources>
    <string name="app_name">FloridaRestaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorep_ipsun">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no</string>
    <string name="Reservar_una_mesa">Reservar una mesa</string>
    <string name="numero_de_invitados">Numero de invitados</string>
    <string name="tiempo_de_reserva">Hora de reserva</string>
    <string name="informaci_n_de_contacto">Información de contacto</string>
    <string name="nombre">Nombre</string>
    <string name="am">AM</string>
</resources>
